# Penny

./: CMakeLists.txt  Dockerfile  README.md  setup.py  test.py
Penny/: utils.py
csrc/: all_reduce.cu  all_reduce_double_ring.cu  all_reduce_oneshot.cu  all_reduce_ring.cu  all_reduce_ring_simple.cu  all_reduce_ring_standard.cu  all_reduce_tree.cu  all_reduce_twoshot.cu  common.h  custom_all_reduce.cu  custom_all_reduce.cuh  example.cu  exchange.cu  torch_interface.cpp
extra/: benchmark_all_gather.py  benchmark_allreduce.py  benchmark_exchange.py  benchmark_exchange2.py  benchmark_reduce_scatter.py  ring_visualize.py  sglang.patch
penny/: custom_all_reduce.py  utils.py
